fix row actions are not really visible in case the label is long

--- a/plugins/Morpheus/stylesheets/typography.less
+++ b/plugins/Morpheus/stylesheets/typography.less
@@ -34,13 +34,6 @@ h2 {
 .tableConfiguration div.configItem span.action {
     color: @brand-blue;
 }
-table.dataTable .dataTableRowActions a.rightmost {
-    background: none !important;
-}
-
-table.dataTable .columnodd .dataTableRowActions a.rightmost {
-    background: none !important;
-}
 
 .dataTablePages {
     color: @brand-black;
